syntax = "proto3";
package MinecraftPlayer;
option java_package = "com.yplugins.minecraftrpc.proto.player";
option java_multiple_files = true;
option java_outer_classname = "MinecraftRPC";

import "minecraft_entity.proto";
import "minecraft_world.proto";

service MinecraftPlayer {
    rpc getOnlinePlayers(OnlinePlayersRequest) returns (OnlinePlayersResponse);
    rpc getOnlinePlayer(OnlinePlayerRequest) returns (OnlinePlayerResponse);
}

message CommandStatus {
    CommandStatusCode code = 1;
    string extra = 2;
}

enum CommandStatusCode {
    OK = 0;
    UNKNOWN_ERROR = 1;
    MISSING_ARGUMENT = 2;
    INVALID_ARGUMENT = 3;
    NOT_IMPLEMENTED = 4;
    PLAYER_NOT_FOUND = 5;
}

message OnlinePlayer {
    string name = 1; // name of the player
    MinecraftWorld.Location location = 2; // entity of the player
    string uuid = 3; // UUID of the player
    string address = 4; // IP address of the player
    int32 ping = 5; // ping of the player
}

message OnlinePlayersRequest {
}

message OnlinePlayersResponse {
    CommandStatus status = 1;
    repeated OnlinePlayer players = 2;
}

message OnlinePlayerRequest {
    oneof identifier {
        string name = 1; // name of the player
        string uuid = 2; // UUID of the player
    }
}

message OnlinePlayerResponse {
    CommandStatus status = 1;
    OnlinePlayer player = 2;
}